--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Output <span class="caret"></span>
                 <hr>
 
                 <center>
-<div class="btn-group" role="group">
+<div class="btn-group" role="group" style="margin-bottom:25px">
 	<button onclick="table.generate()" class="btn btn-primary" data-toggle="tooltip" title="Generate code">Generate</button>
 	<div class="btn-group dropdown">
         	<button title="Output language" type="button" id="format-btn" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LaTeX <span class="caret"></span></button>
