--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                         <div class="mobile-col-xs" onclick="table.prepareEmail()"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></div>
                     </div>
                 </div>
-<!--
 <center>
-<!-- Header
+<!-- Header----->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-5146982563696073"
@@ -51,7 +50,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</center>-->
+</center>
 
                 <nav class="nav-latex" id="nav-latex">
                     <div class="clearfix">
@@ -265,17 +264,17 @@ Output <span class="caret"></span>
        		   <li data-value="bbcode"><a href="#">BBCode</a></li>
        		   <li data-value="wikicode"><a href="#">Wikicode</a></li>
  	      	   <li role="separator" class="divider"></li>
-		  <li class="dropdown-header">Data</a></li>
+		  <li class="dropdown-header">Data</li>
 	          <li data-value="csv"><a href="#">CSV</a></li>
         	  <li role="separator" class="divider"></li>
 	  	<li class="dropdown-header">Legacy formats</li>
          	 <li data-value="wml"><a href="#">WML</a></li>
         	</ul>
 	</div>
-	<button title="Settings" class="btn btn-default" data-target="#format-settings" data-toggle="modal"><span class="glyphicon glyphicon-cog"></span></button>
+	<button title="Settings" class="btn btn-default" data-target="#format-settings" data-toggle-second="tooltip" data-toggle="modal"><span class="glyphicon glyphicon-cog"></span></button>
 </div>
 
-<!-- Before-Generate -->
+<!-- Before-Generate
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5146982563696073"
@@ -284,7 +283,7 @@ Output <span class="caret"></span>
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script><!----->
+</script>--->
 
                 </center>
                 <br>
@@ -337,13 +336,13 @@ Output <span class="caret"></span>
                                         <h6>Effects</h6>
                                         <div class="btn-toolbar" role="toolbar">
                                             <div class="btn-group" role="group" aria-label="Diagonal separators">
-                                                <button type="button" class="btn btn-default active" id="info_diag_zero" onclick="table.separators(0)"><img src="diag-zero.png"></button>
-                                                <button type="button" class="btn btn-default" id="info_diag_one" onclick="table.separators(1)"><img src="svg/diag-one.svg"></button>
-                                                <button type="button" class="btn btn-default" id="info_diag_two" onclick="table.separators(2)"><img src="svg/diag-two.svg"></button>
+                                                <button type="button" class="btn btn-default active" id="info_diag_zero" data-toggle="tooltip" title="No diagonal line" onclick="table.separators(0)"><img src="diag-zero.png"></button>
+                                                <button type="button" class="btn btn-default" id="info_diag_one" data-toggle="tooltip" title="Diagonal line" onclick="table.separators(1)"><img src="svg/diag-one.svg"></button>
+                                                <button type="button" class="btn btn-default" id="info_diag_two" data-toggle="tooltip" title="Two diagonal lines" onclick="table.separators(2)"><img src="svg/diag-two.svg"></button>
                                             </div>
                                             <div class="btn-group" role="group" aria-label="Cell rotation">
-                                                <button type="button" class="btn btn-default active" id="info-unrotated" onclick="table.rotate(false)"><span class="glyphicon glyphicon-font"></span></button>
-                                                <button type="button" class="btn btn-default" id="info-rotated" onclick="table.rotate(true)"><span class="glyphicon glyphicon-font" style="transform: rotate(-90deg);margin-left: -4px;"></span></button>
+                                                <button type="button" class="btn btn-default active" id="info-unrotated" onclick="table.rotate(false)" data-toggle="tooltip" title="Horizontal text"><span class="glyphicon glyphicon-font"></span></button>
+                                                <button type="button" class="btn btn-default" id="info-rotated" onclick="table.rotate(true)" data-toggle="tooltip" title="Vertical text"><span class="glyphicon glyphicon-font" style="transform: rotate(-90deg);margin-left: -4px;"></span></button>
                                             </div>
                                         </div>
                                         <div id="info-diagonal-block" style="display:none;">
@@ -622,13 +621,13 @@ Output <span class="caret"></span>
                 </div>
                 <div class="modal-body">
                     <h4>Select cells</h4>
-                    <p>To select multiple cells, uses <kbd>CTRL + Click</kbd> (or <kbd>&#x2318; + Click</kbd> on Macintosh). Hold <kbd>CTRL</kbd> (or <kbd>&#x2318;</kbd>) and click on all the cells that you want to select.
-                        <p>To select multiple adjacent cells, uses <kbd>SHIFT + Click</kbd>. Click on the first cell, then hold <kbd>Shift</kbd> and click on the last cell.
+                    <p style="margin-left:2em;">To select multiple cells, uses <kbd>CTRL + Click</kbd> (or <kbd>&#x2318; + Click</kbd> on Macintosh). Hold <kbd>CTRL</kbd> (or <kbd>&#x2318;</kbd>) and click on all the cells that you want to select.</p>
+                        <p style="margin-left:2em;">To select multiple adjacent cells, uses <kbd>SHIFT + Click</kbd>. Click on the first cell, then hold <kbd>Shift</kbd> and click on the last cell.</p>
                             <h4>Import LaTeX tables</h4>
-                            <p>Under the logo, there's a <kbd>File</kbd> menu. Click on it and then follows <kbd>File</kbd> &gt; <kbd>Import table</kbd> &gt; <kbd>LaTeX</kbd>.
+                            <p style="margin-left:2em;">Under the logo, there's a <kbd>File</kbd> menu. Click on it and then follows <kbd>File</kbd> &gt; <kbd>Import table</kbd> &gt; <kbd>LaTeX</kbd>.</p>
                                 <h4>My table is too wide ! What can I do ?</h4>
-                                <p>You can fix the issue if you are generating LaTeX code. To do so, select the menu items <kbd>Output &gt; Settings</kbd>. Then, choose an option under <kbd>Fit table to page method</kbd></span>.
-                                    <h4>More help</h4> If you have more questions, check the <a rel="help" href="help.html" target="_blank">FAQ</a>.
+                                <p style="margin-left:2em;">You can fix the issue if you are generating LaTeX code. To do so, select the menu items <kbd>Output &gt; Settings</kbd>. Then, choose an option under <kbd>Fit table to page method</kbd></span>.</p>
+                                    <h4>More help</h4><p  style="margin-left:2em;"> If you have more questions, check the <a rel="help" href="help.html" target="_blank">FAQ</a>.</p>
                 </div>
             </div>
         </div>
@@ -1077,7 +1076,7 @@ Output <span class="caret"></span>
 						.tab('show')
 				})
 
-			$('[data-toggle="tooltip"]').tooltip({
+			$('[data-toggle="tooltip"],[data-toggle-second="tooltip"]').tooltip({
 container: 'body',
 placement: 'auto top'
 });
