--- a/help.html
+++ b/help.html
@@ -302,6 +302,12 @@ document.write("t")
 <li>\hline</li>
 <li>\hhline
 <li>\i</li>
+<li>\ieme</li>
+<li>\iemes</li>
+<li>\ier</li>
+<li>\iere</li>
+<li>\iers</li>
+<li>\ieres</li>
 <li>\j</li>
 <li>\k</li>
 <li>\l</li>
@@ -338,7 +344,9 @@ document.write("t")
 <li>\rowcolors
 <li>\rotcell</li>
 <li>\section</li>
+<li>\sout</li>
 <li>\ss</li>
+<li>\st</li>
 <li>\subsection</li>
 <li>\tablefootnote
 <li>\tabucline</li>
@@ -353,14 +361,18 @@ document.write("t")
 <li>\textemdash
 <li>\textexclamdown
 <li>\textit</li>
+<li>\textordfeminine
+<li>\textordmasculine
 <li>\textquestionmark
 <li>\textsl</li>
+<li>\textsuperscript
 <li>\textsterling
 <li>\textthreequartersemdash
 <li>\th
 <li>\TH
 <li>\toprule</li>
 <li>\u</li>
+<li>\ul</li>
 <li>\uline</li>
 <li>\underline</li>
 <li>\url</li>
