--- a/help.html
+++ b/help.html
@@ -201,6 +201,12 @@ document.write("t")
 <li>xtabular</li>
 <li>mpxtabular</li>
 </ul>
+<p><strong>From <em>tabularray</em> package :</strong></p>
+<ul>
+<li>tblr</li>
+<li>longtblr</li>
+<li>talltblr</li>
+</ul>
 <h3><a id="Supported_commands_40"></a>Supported commands (<span id="count"></span> commands)</h3>
 
 <ul class="supp">
@@ -344,6 +350,11 @@ document.write("t")
 <li>\rowcolors
 <li>\rotcell</li>
 <li>\section</li>
+<li>\SetCell
+<li>\SetColumn
+<li>\SetColumns
+<li>\SetRow
+<li>\SetRows
 <li>\sout</li>
 <li>\ss</li>
 <li>\st</li>
