--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" id="meta-viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A powerful and robust LaTeX, ConTeXt, Plain TeX, PreTeXt, EPlain, Markdown, Textile, CSV and HTML Table Editor and Generator. Import data from LaTeX, Excel, LibreOffice and more.">
-    <script data-ad-client="ca-pub-5146982563696073" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5146982563696073"
+     crossorigin="anonymous"></script>
     <title>LaTeX Tables Editor</title>
     <link href="css.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +46,11 @@
 <center style="padding:20px;padding-bottom:45px;">
 <!-- Header----->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px;"
+     style="display:block"
      data-ad-client="ca-pub-5146982563696073"
-     data-ad-slot="9054299450"></ins>
+     data-ad-slot="9054299450"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
