--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      style="display:block"
      data-ad-client="ca-pub-5146982563696073"
      data-ad-slot="9054299450"
-     data-ad-format="auto"
+     data-ad-format="horizontal"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
