--- a/index.html
+++ b/index.html
@@ -350,6 +350,73 @@
 						</div>
 					</div>
 				</div>
+	<!--- Content ---->
+
+		<hr>
+		<div id="page-content">
+		<h2>What is LaTeX?</h2>
+		<p> LaTeX is a free typesetting system that allows their users to use a markup language to produce high-quality and consistent documents. Released in 1984, it has since become a standard in academia. Even though LaTeX is relatively easy to use, sometimes building complex typographical structures such as tables can become challenging. This free online generator allows you to build complex tables with a WYSIWYG interface.
+
+
+		<h2>What is this editor?</h2>
+
+<p>This editor is a free tool to let you build high-quality tables easily. This editor try to handle as many typographical or compatibility issues as possible to generate the cleaniest code possible. It also provides you a user interface that is easy to use, intuitive and really powerful. It is the most complexe table editor on the Internet. You can even load your LaTeX tables or import data from spreadsheets.
+
+<p>This editor is free, but also open source and entirely client-based. This means that the content of your table is never send to a server. It stays with you, on your computer. We are hosted by GitHub and really respectful of your privacy.
+
+<p>With this editor, you can merge cells (use <code>CTRL+Click</code> or <code>SHIFT+Click</code> to select multiple cells), draw borders, set the border style or color and set the background color of each cell.</p>
+
+
+		<h2>My table is too wide. How can I fix it?</h2>
+
+<p>LaTeX doesn't have an integrated algorithm to automatically adjust the width of each column. Therefore, a table can become too wide and cause a <code>10000 badness</code> warning. This editor has two options to fix the issue:
+<ul>
+<li><strong>Scale:</strong> Your table will be resized so it will fit the width of the page. Everything will therefore be smaller but the overall presentation will look the same.
+<li><strong>Shrink:</strong> Each column will be narrower so your table will fit the width of the page. In most case, this should be the best option. However, sometimes, your text might not fit in a column.
+</ul></p>
+<p>You can activate those options in the <a href="#" data-target="#format-settings" data-toggle="modal">Settings</a>. Another option is to <a href="#" data-target="#format-settings" data-toggle="modal">display your table in landscape mode</a>.
+
+		<h2>My table is too long. How can I fix it?</h2>
+
+<p>By default, when a table is too long, it will be cropped by the page. However, it is really easy to fix this. In the <a href="#" data-target="#format-settings" data-toggle="modal">Settings</a>, make sure that is the option "Split table in multiple pages" is checked.
+
+		<h2>How can I learn more about LaTeX tables?</h2>
+
+<p>This website provide several ressources to easily learn to write LaTeX tables <u>without</u> using a generator! Check out our articles:</p>
+
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="thumbnail-description bg-warning">Tabular</div>
+      <div class="caption">
+        <h2>LaTeX Tables 101: Tabular</h2>
+        <p>Learn to write tables with the <code>tabular</code> environment.</p>
+        <p><a href="ressources/tabular.html" class="btn btn-primary" role="button">Read</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="thumbnail-description bg-info">Tabularray</div>
+      <div class="caption">
+        <h2>LaTeX Tables 101: Tabularray</h2>
+        <p>Learn to write modern tables with the <code>tblr</code> environment.</p>
+        <p><a href="ressources/tabularray.html" class="btn btn-primary" role="button">Read</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="thumbnail-description bg-danger" style="background:red;">Plain TeX</div>
+      <div class="caption">
+        <h2>LaTeX Tables: Historical</h2>
+        <p>LaTeX comes from TeX. Learn how to write a table in Plain TeX.</p>
+        <p><a href="ressources/tabularray.html" class="btn btn-primary disabled" role="button">Coming Soon</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+		</div>
 				<hr>
 				<center><a rel="help" href="help.html" target="_blank">Help</a> | <a href="privacy.html" target="_blank">Privacy</a> | <a href="changelog.txt" target="_blank">Changelog</a> | 
 				<a href="https://github.com/JDMCreator/LaTeXTableEditor/issues" target="_blank">Github</a> | Our other project : <a href="https://www.timemaths.com" target="_blank">TimeMaths : An Online Time Calculator</a></center>
